--- a/library.html
+++ b/library.html
@@ -94,9 +94,7 @@
     <div class="modal-overlay" onclick="closeModal()"></div>
     <div class="modal-content">
       <button class="modal-close" onclick="closeModal()">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
-        </svg>
+        <span class="iconify" data-icon="ant-design:close-outlined" style="width: 1.5rem; height: 1.5rem;"></span>
       </button>
       <div id="modalBody"></div>
     </div>
@@ -113,6 +111,9 @@
     <p class="text-sm">© 2025 Twist of Fate. All rights reserved.</p>
     <p class="text-sm">Magic by <a target="_blank" href="http://www.stefandinca.ro">stefandinca.ro</a></p>
   </div>
+
+  <!-- Iconify for Ant Design Icons -->
+  <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
 
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
