--- a/admin.html
+++ b/admin.html
@@ -221,7 +221,11 @@
             </div>
             <div class="form-row">
               <div class="form-group">
-                <label for="gameMechanics">Game Mechanics</label>
+                <label for="categories">Categories (comma-separated)</label>
+                <input type="text" id="categories" name="categories" placeholder="Economic, Fantasy, Wargame"/>
+              </div>
+              <div class="form-group">
+                <label for="gameMechanics">Game Mechanics (comma-separated)</label>
                 <input type="text" id="gameMechanics" name="gameMechanics"/>
               </div>
             </div>
