--- a/admin.html
+++ b/admin.html
@@ -131,6 +131,10 @@
                   <div class="placeholder">🎲 No image</div>
                 </div>
               </div>
+              <div class="form-group">
+                <label for="bggRank">BGG Rank</label>
+                <input type="number" id="bggRank" name="bggRank" placeholder="e.g. 1" min="1"/>
+              </div>
             </div>
             <div class="form-row">
               <div class="form-group">
@@ -151,6 +155,12 @@
               <div class="form-group">
                 <label for="playerCountMax">Max Players</label>
                 <input type="text" id="playerCountMax" name="playerCountMax" placeholder="4 or 5+"/>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group">
+                <label for="recommendedPlayers">Recommended Player Count (Best)</label>
+                <input type="text" id="recommendedPlayers" name="recommendedPlayers" placeholder="e.g. 4"/>
               </div>
             </div>
             <div class="form-row">
