--- a/library.html
+++ b/library.html
@@ -19,7 +19,7 @@
   <!-- Page Title -->
   <div class="text-center py-6">
     <h1 class="text-3xl font-bold">Board Game Library</h1>
-    <p class="text-xl font-medium py-3">Explore our collection of 180+ board games</p>
+    <p class="text-xl font-medium py-3">Explore our collection of 300+ board games</p>
   </div>
 
   <!-- Search Bar (Always Visible) -->
@@ -80,6 +80,18 @@
             <option value="">All Types</option>
             <option value="Base Game">Base Game</option>
             <option value="Expansion">Expansion</option>
+          </select>
+        </div>
+
+        <!-- Complexity -->
+        <div class="filter-group">
+          <div class="filter-group-title">Complexity</div>
+          <select id="complexityFilterMobile" class="filter-select-mobile">
+            <option value="">All Complexities</option>
+            <option value="light">Light (1-2)</option>
+            <option value="medium-light">Medium Light (2-3)</option>
+            <option value="medium">Medium (3-4)</option>
+            <option value="heavy">Heavy (4+)</option>
           </select>
         </div>
 
@@ -170,6 +182,18 @@
             <option value="">All Types</option>
             <option value="Base Game">Base Game</option>
             <option value="Expansion">Expansion</option>
+          </select>
+        </div>
+
+        <!-- Complexity -->
+        <div class="filter-group">
+          <div class="filter-group-title">Complexity</div>
+          <select id="complexityFilter" class="filter-select-sidebar">
+            <option value="">All Complexities</option>
+            <option value="light">Light (1-2)</option>
+            <option value="medium-light">Medium Light (2-3)</option>
+            <option value="medium">Medium (3-4)</option>
+            <option value="heavy">Heavy (4+)</option>
           </select>
         </div>
 
