--- a/library.html
+++ b/library.html
@@ -349,10 +349,16 @@
             <span class="iconify" data-icon="ant-design:eye-outlined"></span>
             View Game Details
           </button>
-          <button id="restartSurveyBtn" class="survey-btn-secondary">
-            <span class="iconify" data-icon="ant-design:reload-outlined"></span>
-            Try Again
-          </button>
+          <div class="survey-result-secondary-actions">
+            <button id="showAnotherBtn" class="survey-btn-secondary">
+              <span class="iconify" data-icon="ant-design:swap-outlined"></span>
+              Show Another
+            </button>
+            <button id="restartSurveyBtn" class="survey-btn-secondary">
+              <span class="iconify" data-icon="ant-design:reload-outlined"></span>
+              Try Again
+            </button>
+          </div>
         </div>
       </div>
 
